--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Julián Úsuga</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="custom.css">
     <style>
@@ -32,7 +32,7 @@
             <div class="flex flex-row w-full justify-between items-center">
                 <div class="flex flex-col p-6 m-auto items-center">
                     <p class="text-2xl text-gray-400">Hello, world!</p>
-                    <h4 class="text-4xl text-white ">My name is Julián Usuga</h4>
+                    <h4 class="text-4xl text-white ">My name is Julián Úsuga</h4>
                     <p class="text-gray-300 text-center"> Stats Student <br> Python Developer Jr. | Azure DE</p>
 
                     <div class="my-4 w-2/4 flex  justify-between text-4xl text-white">
