--- a/index.html
+++ b/index.html
@@ -17,16 +17,9 @@
 
 <body>
 
-    <div class="h-screen p-0">
+    <div class="h-screen p-0 bg-green-900">
 
-        <div class="video-background">
-            <div class="video-foreground">
-                <iframe
-                    src="https://www.youtube.com/embed/lRTtMcx6rSM?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&mute=1&start=22"
-                    frameborder="0" allowfullscreen></iframe>
-            </div>
-        </div>
-        <div class="glass text-xl  absolute inset-0 flex justify-center w-10/12 h-5/6 m-auto shadow-md space-x-4 ">
+        <div class="glass text-xl absolute inset-0 flex justify-center w-10/12 h-5/6 m-auto shadow-md space-x-4 ">
 
 
             <div class="flex flex-row w-full justify-between items-center">
