--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="glass text-xl absolute inset-0 flex justify-center w-10/12 h-5/6 m-auto shadow-md space-x-4 ">
 
-            <div class="flex flex-row w-full justify-between items-center">
+            <div class="flex sm:flex-row flex-col w-full justify-between items-center">
                 <div class="flex flex-col p-6 m-auto items-center">
                     <p class="text-2xl text-gray-400">Hello, world!</p>
                     <h4 class="text-4xl text-white ">My name is Julián Úsuga</h4>
@@ -36,7 +36,7 @@
 
                     </div>
                 </div>
-                <div class="glass-child overflow-auto no-scrollbar px-6 w-1/2 py-6 h-full flex flex-col ">
+                <div class="glass-child overflow-auto no-scrollbar px-6 sm:w-1/2 w-full py-6 h-full flex flex-col ">
                     <p class="text-3xl my-2 text-blue-200">Projects</p>
 
                     <p class="text-xl text-white ">2021</p>
